--- a/index.html
+++ b/index.html
@@ -1,12 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Paranjape Opulus</title>
+
+		<link rel="stylesheet" href="style.css" />
+		<!-- <link rel="stylesheet" href="css/bootstrap.css"> -->
+	</head>
+	<body>
+		<header>
+			<img src="images/Paranjape-New-logo-01.png" alt="" class="logo" />
+			<input type="checkbox" id="nav-toggle" class="nav-toggle" />
+			<nav>
+				<ul>
+					<li>
+						<a href="">Home</a>
+					</li>
+					<li><a href="opulent-project.html">Opulent Projects</a></li>
+					<li><a href="opulent-homes.html">Opulent Homes</a></li>
+				</ul>
+			</nav>
+
+			<label for="nav-toggle" class="nav-toggle-label">
+				<span></span>
+			</label>
+		</header>
+
+		<!-- Slideshow container -->
+		<div class="slideshow-container">
+			<!-- Full-width images with number and caption text -->
+
+			<div class="mySlides fade">
+				<div class="numbertext">2 / 3</div>
+				<img
+					src="images/Art-of-Luxury-Living-web-banner-12-11-21.jpg"
+					style="width: 85%"
+				/>
+				<div class="text"></div>
+			</div>
+
+			<div class="mySlides fade">
+				<div class="numbertext">3 / 3</div>
+				<img src="images/op-home-2-new.jpg" style="width: 80%" />
+				<div class="text"></div>
+			</div>
+
+			<!-- Next and previous buttons -->
+			<!-- <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+			<a class="next" onclick="plusSlides(1)">&#10095;</a> -->
+		</div>
+		<br />
+
+		<!-- The dots/circles
+		<div style="text-align: center">
+			<span class="dot" onclick="currentSlide(1)"></span>
+			<span class="dot" onclick="currentSlide(2)"></span>
+			<span class="dot" onclick="currentSlide(3)"></span>
+		</div> -->
+
+		<h2 class="text-location">The Prime Locality of THANE</h2>
+		<!-- Hover Images -->
+		<div class="container">
+			<img src="images/ELITE-GENTRY-1.jpg" alt="" class="box" class="first" />
+			<img src="images/EPICENTER-1.jpg" alt="" class="box" class="main" />
+			<img src="images/NATURE-1.jpg" alt="" class="box" class="second" />
+			<img src="images/URBAN-1.jpg" alt="" class="box" class="last" />
+		</div>
+
+		<div class="map">
+			<img
+				class="map1"
+				src="images/Web capture_21-12-2021_203644_www.theparanjapeopulus.com.jpeg"
+				alt=""
+			/>
+			<img
+				class="map2"
+				src="images/Web capture_21-12-2021_204851_www.theparanjapeopulus.com.jpeg"
+				alt=""
+			/>
+		</div>
+		<div class="footer-container">
+			<footer class="footer">
+				<div class="address-container">
+					<p>
+						Site Address: Paranjape Schemes Construction limited, Opulus,
+						Pokhran Road 2, Manpada, Thane West-400610.
+					</p>
+					<p>
+						Opulus S1 S2 R1 R2 and R3 MAHARERA NO. : P51700022773
+						www.maharera.mahaonline.gov.in
+					</p>
+				</div>
+				<div>
+					<p class="disclaimer">
+						Disclaimer: This perspective image may not be to the scale or may
+						not represent actual facade / elevation. The details of windows,
+						paints, elevation features, landscaping, ground development, trees
+						etc. in this perspective is an artist’s impression and would be
+						different to actual construction of building and development. The
+						viewers affirm that he / she has not taken his/ her decision of
+						purchase/booking by viewing this perspective. The company is not
+						responsible for the action of the viewer’s booking / purchasing a
+						unit relying on this perspective.
+					</p>
+				</div>
+				<div class="copyright">
+					<p>
+						©2021 Paranjape Schemes (Construction) Ltd. All rights reserved |
+						Powered by : Exyium 
+						
+					</p>
+				</div>
+			</footer>
+		</div>
+
+		<script src="script.js"></script>
+		<!-- <script src="js/bootstrap.js"</script> -->
+	</body>
 </html>
+
+https://www.w3schools.com/cssref/css3_pr_mediaquery.asp
