--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<header>
-			<img src="images/Paranjape-New-logo-01.png" alt="" class="logo" />
+			<img src="images/Paranjape-New-logo-01.png" alt="" class="logo"  />
 			<input type="checkbox" id="nav-toggle" class="nav-toggle" />
 			<nav>
 				<ul>
@@ -21,7 +21,7 @@
 					<li><a href="opulent-project.html">Opulent Projects</a></li>
 					<li><a href="opulent-homes.html">Opulent Homes</a></li>
 				</ul>
-			</nav>
+			</nav>  
 
 			<label for="nav-toggle" class="nav-toggle-label">
 				<span></span>
@@ -36,14 +36,14 @@
 				<div class="numbertext">2 / 3</div>
 				<img
 					src="images/Art-of-Luxury-Living-web-banner-12-11-21.jpg"
-					style="width: 85%"
+					style="width: 100%"
 				/>
 				<div class="text"></div>
 			</div>
 
 			<div class="mySlides fade">
 				<div class="numbertext">3 / 3</div>
-				<img src="images/op-home-2-new.jpg" style="width: 80%" />
+				<img src="images/op-home-2-new.jpg" style="width: 100%" />
 				<div class="text"></div>
 			</div>
 
@@ -62,7 +62,7 @@
 
 		<h2 class="text-location">The Prime Locality of THANE</h2>
 		<!-- Hover Images -->
-		<div class="container">
+		<div class="container" id="grid" >
 			<img src="images/ELITE-GENTRY-1.jpg" alt="" class="box" class="first" />
 			<img src="images/EPICENTER-1.jpg" alt="" class="box" class="main" />
 			<img src="images/NATURE-1.jpg" alt="" class="box" class="second" />
